@@ -36,6 +36,8 @@ import net.minecraftforge.gradle.util.caching.CachedTask;
 
 import org.gradle.api.file.FileVisitDetails;
 import org.gradle.api.file.FileVisitor;
+import org.gradle.api.logging.LoggingManager;
+import org.gradle.api.logging.LogLevel;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFile;
 import org.gradle.api.tasks.Optional;
@@ -47,6 +49,9 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
 import com.google.common.io.ByteStreams;
 import com.google.common.io.Files;
+
+import groovy.lang.Closure;
+import groovy.util.BuilderSupport;
 
 public class TaskRecompileMc extends CachedTask
 {
@@ -72,14 +77,24 @@ public class TaskRecompileMc extends CachedTask
         File tempCls = new File(getTemporaryDir(), "compiled");
         File outJar = getOutJar();
 
+        // delete and recreate dirs
+        getProject().delete(tempSrc, tempCls);
         tempSrc.mkdirs();
-        extractSources(tempSrc, inJar);
-
-        // recompile
-        // now compile, if im compiling.
         tempCls.mkdirs();
 
-        this.getAnt().invokeMethod("javac", ImmutableMap.builder()
+        // extract sources
+        extractSources(tempSrc, inJar);
+
+        // Remove errors on normal runs
+        LoggingManager log = getLogging();
+        LogLevel startLevel = getProject().getGradle().getStartParameter().getLogLevel();
+        if (startLevel.compareTo(LogLevel.LIFECYCLE) >= 0) {
+            log.setLevel(LogLevel.ERROR);
+        }
+
+        // recompile
+        this.getAnt().invokeMethod("javac", new Object[] {
+            ImmutableMap.builder()
                 .put("srcDir", tempSrc.getCanonicalPath())
                 .put("destDir", tempCls.getCanonicalPath())
                 .put("failonerror", true)
@@ -89,8 +104,31 @@ public class TaskRecompileMc extends CachedTask
                 .put("source", "1.6")
                 .put("target", "1.6")
                 .put("debug", "true")
-                //.put("compilerarg", "-Xlint:-options") // to silence the bootstrap classpath warning
-                .build());
+                .build(),
+            new Closure<Object>(this, this) {
+                protected Object doCall(Object arguments) {
+                    String currentExtDirs = System.getProperty("java.ext.dirs");
+                    String newExtDirs = "";
+                    String[] parts = currentExtDirs.split(File.pathSeparator);
+                    if (parts.length > 0) {
+                        String lastPart = parts[parts.length - 1];
+                        for (String part : parts) {
+                            if (!part.equals("/System/Library/Java/Extensions")) {
+                                newExtDirs += part;
+                                if (!part.equals(lastPart)) {
+                                    newExtDirs += File.pathSeparator;
+                                }
+                            }
+                        }
+                    }
+                    ((BuilderSupport) getDelegate()).invokeMethod("compilerarg",
+                        // Remove old vecmath
+                        ImmutableMap.of("line", "-Djava.ext.dirs=${newExtDirs}")
+                    );
+                    return null;
+                }
+            }
+        });
 
         outJar.getParentFile().mkdirs();
         createOutput(outJar, inJar, tempCls, getInResources());
